--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,26 +1,15 @@
 {
-	"name": "SuperTabManager",
+	"name": "Super Tab Manager",
 	"description": "Most powerful browser tab manager ever created. Contact/Bug Report: wentallout@gmail.com",
 	"version": "1.0.0",
-	"permissions": [
-		"tabs",
-		"activeTab",
-		"tabGroups",
-		"favicon",
-		"bookmarks",
-		"sidePanel",
-		"system.memory",
-		"storage"
-	],
+	"permissions": ["tabs", "activeTab", "tabGroups", "favicon", "bookmarks", "system.memory"],
 	"manifest_version": 3,
 	"action": {
-		"default_title": "SuperTabManager - Clean Your Messy Tab 2024",
+		"default_title": "Super Tab Manager - Clean Your Messy Tab 2024",
 		"default_icon": "icon128.png",
 		"default_popup": "index.html"
 	},
-	"side_panel": {
-		"default_path": "sidepanel.html"
-	},
+
 	"icons": {
 		"16": "icon16.png",
 		"32": "icon32.png",
