--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "super-tab-manager",
-	"version": "1.0.2",
+	"version": "1.0.4",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -15,36 +15,37 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@iconify-json/material-symbols-light": "^1.1.16",
-		"@playwright/test": "^1.41.1",
-		"@sveltejs/adapter-auto": "^3.1.1",
+		"@iconify-json/material-symbols-light": "^1.1.17",
+		"@playwright/test": "^1.43.0",
+		"@sveltejs/adapter-auto": "^3.2.0",
 		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.0",
+		"@sveltejs/kit": "^2.5.5",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@types/chrome": "^0.0.258",
+		"@types/chrome": "^0.0.265",
 		"@types/eslint": "8.56.0",
-		"@typescript-eslint/eslint-plugin": "^6.19.1",
-		"@typescript-eslint/parser": "^6.19.1",
-		"autoprefixer": "^10.4.16",
-		"browserslist": "^4.22.3",
-		"chrome-types": "^0.1.277",
-		"eslint": "^8.56.0",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
+		"autoprefixer": "^10.4.19",
+		"browserslist": "^4.23.0",
+		"chrome-types": "^0.1.278",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"lightningcss": "^1.23.0",
-		"postcss": "^8.4.32",
-		"postcss-load-config": "^5.0.2",
-		"postcss-preset-env": "^9.3.0",
-		"prettier": "^3.2.4",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.9",
-		"svelte-check": "^3.6.3",
-		"svelte-sonner": "^0.3.17",
+		"eslint-plugin-svelte": "^2.36.0",
+		"lightningcss": "^1.24.1",
+		"postcss": "^8.4.38",
+		"postcss-load-config": "^5.0.3",
+		"postcss-preset-env": "^9.5.4",
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.2",
+		"svelte": "^4.2.12",
+		"svelte-check": "^3.6.9",
+		"svelte-sonner": "^0.3.21",
 		"tslib": "^2.6.2",
-		"typescript": "^5.3.3",
-		"unplugin-icons": "^0.18.3",
-		"vite": "^5.0.12",
-		"vitest": "^1.2.2"
+		"typescript": "^5.4.4",
+		"unplugin-icons": "^0.18.5",
+		"vite": "^5.2.8",
+		"vitest": "^1.4.0"
 	},
-	"type": "module"
+	"type": "module",
+	"packageManager": "pnpm@8.7.6+sha1.a428b12202bc4f23b17e6dffe730734dae5728e2"
 }
