--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@iconify-json/material-symbols-light": "^1.2.12",
-		"@playwright/test": "^1.49.1",
+		"@iconify-json/material-symbols-light": "^1.2.13",
+		"@playwright/test": "^1.50.0",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.15.2",
+		"@sveltejs/kit": "^2.16.1",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@types/chrome": "^0.0.265",
 		"@types/eslint": "8.56.0",
@@ -27,23 +27,27 @@
 		"@typescript-eslint/parser": "^6.21.0",
 		"autoprefixer": "^10.4.20",
 		"browserslist": "^4.24.4",
-		"chrome-types": "^0.1.330",
+		"chrome-types": "^0.1.334",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
-		"lightningcss": "^1.29.0",
-		"postcss": "^8.4.49",
+		"fs": "^0.0.1-security",
+		"lightningcss": "^1.29.1",
+		"path": "^0.12.7",
+		"postcss": "^8.5.1",
 		"postcss-load-config": "^5.1.0",
 		"postcss-preset-env": "^9.6.0",
 		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.2",
+		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^4.2.19",
 		"svelte-check": "^3.8.6",
+		"svelte-preprocess": "^6.0.3",
 		"svelte-sonner": "^0.3.28",
+		"tiny-glob": "^0.2.9",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.3",
 		"unplugin-icons": "^0.18.5",
-		"vite": "^5.4.11",
+		"vite": "^5.4.14",
 		"vitest": "^1.6.0"
 	},
 	"type": "module",
